Fixxed line overlap on the 404 page.

--- a/public/css/404.scss
+++ b/public/css/404.scss
@@ -24,6 +24,7 @@ main {
         font-size: 3em;
         margin-top: 1.5em;
         margin-bottom: 1em;
+        line-height: 1em;
 
         span {
             color: $color-blue-dark;
